--- a/UI/Controls/NodeView.xaml
+++ b/UI/Controls/NodeView.xaml
@@ -5,6 +5,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:UI.Controls"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
-    <Ellipse Fill="DarkGray"/>
+             d:DesignHeight="300" d:DesignWidth="300" Width="20" Height="20">
+    <Border BorderBrush="Red" BorderThickness="1">
+        <Ellipse Fill="DarkGray"/>
+    </Border>
 </UserControl>
