--- a/UI/Controls/NodeView.xaml
+++ b/UI/Controls/NodeView.xaml
@@ -2,9 +2,9 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:UI.Controls"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300" Width="20" Height="20">
-    <Ellipse Fill="DarkGray"/>
+             d:DesignHeight="300" d:DesignWidth="300" Width="20" Height="20" MouseEnter="UserControl_MouseEnter">
+    <Ellipse x:Name="EllipseLayout" Fill="Green"></Ellipse>
 </UserControl>
