--- a/UI/Controls/NodeView.xaml
+++ b/UI/Controls/NodeView.xaml
@@ -5,6 +5,6 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:UI.Controls"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300" Width="20" Height="20" MouseEnter="UserControl_MouseEnter">
-    <Ellipse x:Name="EllipseLayout" Fill="Green"></Ellipse>
+             d:DesignHeight="300" d:DesignWidth="300" Height="25" Width="25">
+    <Ellipse x:Name="EllipseLayout" Fill="DarkGray"></Ellipse>
 </UserControl>
