--- a/UI/Controls/NodeView.xaml
+++ b/UI/Controls/NodeView.xaml
@@ -3,8 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             x:Name="This"
              xmlns:local="clr-namespace:UI.Controls"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300" Height="25" Width="25">
+             d:DesignHeight="300" d:DesignWidth="300" Height="25" Width="25" MouseDown="UserControl_MouseDown" Cursor="Hand">
     <Ellipse x:Name="EllipseLayout" Fill="DarkGray"></Ellipse>
 </UserControl>
