--- a/UI/Controls/NodeView.xaml
+++ b/UI/Controls/NodeView.xaml
@@ -6,6 +6,7 @@
              x:Name="This"
              xmlns:local="clr-namespace:UI.Controls"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300" MouseDown="UserControl_MouseDown" Cursor="Hand">
-    <Ellipse x:Name="EllipseLayout" Fill="DarkGray"></Ellipse>
+             d:DesignHeight="300" d:DesignWidth="300" MouseDown="UserControl_MouseDown" 
+             Cursor="Hand">
+    <Ellipse x:Name="EllipseLayout" Fill="DarkGray"/>
 </UserControl>
