--- a/UI/MainWindow.xaml
+++ b/UI/MainWindow.xaml
@@ -13,5 +13,16 @@
         </Grid.RowDefinitions>
         <panels:GraphCanvas x:Name="GraphView" />
         <Button Grid.Row="1" HorizontalAlignment="Left" Margin="15,0,0,0" Click="DrawGraph">Test</Button>
+        <!--<Path Stroke="Red">
+            <Path.Data>
+                <PathGeometry>
+                    <PathFigure StartPoint="100, 90">
+                        <ArcSegment Point="95,100" Size="8,10" SweepDirection="Clockwise"/>
+                        <LineSegment Point="105,100"/>
+                        <ArcSegment Point="100,90" Size="10, 8"/>
+                    </PathFigure>
+                </PathGeometry>
+            </Path.Data>
+        </Path>-->
     </Grid>
 </Window>
