--- a/UI/Controls/NodeView.xaml
+++ b/UI/Controls/NodeView.xaml
@@ -4,9 +4,16 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              x:Name="This"
-             xmlns:local="clr-namespace:UI.Controls"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300" MouseDown="UserControl_MouseDown" 
              Cursor="Hand">
-    <Ellipse x:Name="EllipseLayout" Fill="DarkGray"/>
+    <Ellipse Stroke="{Binding ElementName=This, Path=BorderBrush}" 
+             Opacity="{Binding ElementName=This, Path=Opacity}" 
+             Fill="Transparent"
+             StrokeThickness="10"/>
+    <UserControl.Style>
+        <Style TargetType="UserControl">
+            <Setter Property="BorderBrush" Value="DarkGray"/>
+        </Style>
+    </UserControl.Style>
 </UserControl>
