--- a/UI/App.xaml
+++ b/UI/App.xaml
@@ -1,7 +1,8 @@
 ﻿<Application x:Class="UI.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Startup="Application_Startup">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Startup="Application_Startup"
+             xmlns:converters="clr-namespace:UI.Converters">
     <Application.Resources>
-         
+        <converters:CycleToStringConverter x:Key="CycleToStringConverter"/>
     </Application.Resources>
 </Application>
