--- a/UI/MainWindow.xaml
+++ b/UI/MainWindow.xaml
@@ -25,10 +25,12 @@
                 <ColumnDefinition Width="10*"/>
                 <ColumnDefinition Width="5*"/>
             </Grid.ColumnDefinitions>
-            <controls:GraphCanvas Grid.Column="0" Graph="{Binding Graph}"/>
+            <controls:GraphCanvas Grid.Column="0" Graph="{Binding Graph}"
+                                  SelectedCycle="{Binding SelectedCycle}"/>
             <StackPanel Grid.Column="1">
                 <TextBlock Text="{Binding ClusteringCoefficient}"/>
-                <ListBox ItemsSource="{Binding Cycles}"/>
+                <ListBox ItemsSource="{Binding Cycles, Converter={StaticResource CycleToStringConverter}}"
+                         SelectedIndex="{Binding SelectedCycleIndex}"/>
             </StackPanel>
         </Grid>
     </Grid>
