--- a/UI/MainWindow.xaml
+++ b/UI/MainWindow.xaml
@@ -1,12 +1,14 @@
-﻿<Window x:Class="UI.MainWindow"
+﻿<!--84,204,187-->
+    <Window x:Class="UI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:rm="clr-namespace:RadialMenu.Controls;assembly=RadialMenu"
         xmlns:controls="clr-namespace:UI.Controls"
         xmlns:viewModels="clr-namespace:UI.ViewModels"
         mc:Ignorable="d"
-        Title="MainWindow">
+        Title="MainWindow" MinHeight="600" MinWidth="800">
     <Window.DataContext>
         <viewModels:AppViewModel/>
     </Window.DataContext>
@@ -23,13 +25,16 @@
         </Menu>
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="10*"/>
-                <ColumnDefinition Width="5*"/>
+                <ColumnDefinition Width="4*" MinWidth="600"/>
+                <ColumnDefinition Width="3"/>
+                <ColumnDefinition Width="1*"/>
             </Grid.ColumnDefinitions>
             <controls:GraphCanvas Grid.Column="0" Graph="{Binding Graph}"
                                   SelectedCycle="{Binding GraphInformationModel.SelectedCycle}"
-                                  SelectedVerticeIndex="{Binding SelectedVerticeIndex, Mode=OneWayToSource}"/>
-            <Grid Grid.Column="1">
+                                  SelectedVerticeIndex="{Binding SelectedVerticeIndex, Mode=OneWayToSource}"
+                                  IsOpenedCustomMeun="{Binding IsMenuOpened, Mode=TwoWay}"/>
+            <GridSplitter Grid.Column="1" HorizontalAlignment="Stretch"/>
+            <Grid Grid.Column="2">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="*"/>
@@ -45,7 +50,7 @@
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
-                    
+
                     <TextBlock Grid.Row="0" Grid.Column="0"
                                Text="Количетво вершин"/>
                     <TextBlock Grid.Row="0" Grid.Column="1"
@@ -77,23 +82,44 @@
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
-                    
+
                     <TextBlock Grid.Row="0" Grid.Column="0"
                         Text="Индекс выбранной вершины"/>
                     <TextBlock Grid.Row="0" Grid.Column="1"
                                Text="{Binding VerticeInformationModel.Index}"/>
-                    
+
                     <TextBlock Grid.Row="1" Grid.Column="0"
                         Text="Коэффициент кластеризации вершины"/>
                     <TextBlock Grid.Row="1" Grid.Column="1"
                                Text="{Binding VerticeInformationModel.ClusteringCoefficient}"/>
-                    
+
                     <TextBlock Grid.Row="2" Grid.Column="0"
                                Text="Циклы с вершиной"/>
                     <ComboBox Grid.Row="2" Grid.Column="1" 
                               ItemsSource="{Binding VerticeInformationModel.IncludedInCycles, Converter={StaticResource CycleToStringConverter}}"/>
                 </Grid>
             </Grid>
+            <rm:RadialMenu Grid.Column="0" HalfShiftedItems="True"
+                           IsOpen="{Binding IsMenuOpened}" x:Name="RadialMenu" 
+                           Panel.ZIndex="15" Background="White">
+                <rm:RadialMenu.CentralItem>
+                    <rm:RadialMenuCentralItem Command="{Binding CloseRadialMenuCommand}">
+                        <TextBlock>Close</TextBlock>
+                    </rm:RadialMenuCentralItem>
+                </rm:RadialMenu.CentralItem>
+                <rm:RadialMenuItem Command="{Binding LoadGraphCommand}">
+                    <TextBlock>LoadGraph</TextBlock>
+                </rm:RadialMenuItem>
+                <rm:RadialMenuItem>
+                    <TextBlock>Cycles</TextBlock>
+                </rm:RadialMenuItem>
+                <rm:RadialMenuItem>
+                    <TextBlock>Path</TextBlock>
+                </rm:RadialMenuItem>
+                <rm:RadialMenuItem>
+                    <TextBlock>Refresh</TextBlock>
+                </rm:RadialMenuItem>
+            </rm:RadialMenu>
         </Grid>
     </Grid>
 </Window>
