--- a/UI/MainWindow.xaml
+++ b/UI/MainWindow.xaml
@@ -13,6 +13,12 @@
     <Window.DataContext>
         <viewModels:AppViewModel/>
     </Window.DataContext>
+        <Window.Resources>
+        <Style TargetType="TextBlock">
+            <Setter Property="TextWrapping" Value="Wrap"/>
+            <Setter Property="HorizontalAlignment" Value="Stretch"/>
+        </Style>
+    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -28,10 +34,10 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="4*" MinWidth="600"/>
                 <ColumnDefinition Width="3"/>
-                <ColumnDefinition Width="1*"/>
+                <ColumnDefinition Width="2*"/>
             </Grid.ColumnDefinitions>
-            <controls:GraphCanvas Grid.Column="0" Graph="{Binding Graph}"
-                                  SelectedCycle="{Binding GraphInformationModel.SelectedCycle}"
+            <controls:GraphCanvas Grid.Column="0" Graph="{Binding Graph.Graph}"
+                                  VisitedPath="{Binding VisitedPath}"
                                   SelectedVerticeIndex="{Binding SelectedVerticeIndex, Mode=OneWayToSource}"
                                   IsOpenedCustomMeun="{Binding IsMenuOpened, Mode=TwoWay}"/>
             <GridSplitter Grid.Column="1" HorizontalAlignment="Stretch"/>
@@ -68,10 +74,8 @@
                         Text="{Binding GraphInformationModel.ClusteringCoefficient}" />
 
                     <TextBlock Grid.Row="3" Grid.Column="0"
-                               Text="Циклы"/>
-                    <ComboBox Grid.Column="1" Grid.Row="3"
-                        ItemsSource="{Binding GraphInformationModel.Cycles, Converter={StaticResource CycleToStringConverter}}"
-                        SelectedIndex="{Binding GraphInformationModel.SelectedCycleIndex}"/>
+                               Text="Количество циклов"/>
+                    <TextBlock Grid.Row="3" Grid.Column="1" Text="{Binding GraphInformationModel.CyclesCount}"></TextBlock>
                 </Grid>
                 <Grid Grid.Row="1">
                     <Grid.RowDefinitions>
@@ -95,9 +99,9 @@
                                Text="{Binding VerticeInformationModel.ClusteringCoefficient}"/>
 
                     <TextBlock Grid.Row="2" Grid.Column="0"
-                               Text="Циклы с вершиной"/>
-                    <ComboBox Grid.Row="2" Grid.Column="1" 
-                              ItemsSource="{Binding VerticeInformationModel.IncludedInCycles, Converter={StaticResource CycleToStringConverter}}"/>
+                               Text="Количество циклов с вершиной"/>
+                    <TextBlock Grid.Row="2" Grid.Column="1"
+                               Text="{Binding VerticeInformationModel.IncludedInCyclesCount}"/>
                 </Grid>
             </Grid>
             <rm:RadialMenu Grid.Column="0" HalfShiftedItems="True"
@@ -111,7 +115,7 @@
                 <rm:RadialMenuItem Command="{Binding Source={x:Static infra:CommandEventBinder.LoadGraphCommand}}">
                     <TextBlock>LoadGraph</TextBlock>
                 </rm:RadialMenuItem>
-                <rm:RadialMenuItem>
+                <rm:RadialMenuItem Command="{Binding Source={x:Static infra:CommandEventBinder.ShowCyclesCommand}}">
                     <TextBlock>Cycles</TextBlock>
                 </rm:RadialMenuItem>
                 <rm:RadialMenuItem>
