--- a/UI/MainWindow.xaml
+++ b/UI/MainWindow.xaml
@@ -1,5 +1,5 @@
 ﻿<!--84,204,187-->
-    <Window x:Class="UI.MainWindow"
+<Window x:Class="UI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -13,7 +13,7 @@
     <Window.DataContext>
         <viewModels:AppViewModel/>
     </Window.DataContext>
-        <Window.Resources>
+    <Window.Resources>
         <Style TargetType="TextBlock">
             <Setter Property="TextWrapping" Value="Wrap"/>
             <Setter Property="HorizontalAlignment" Value="Stretch"/>
@@ -21,110 +21,103 @@
     </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <Menu Grid.Row="0">
-            <MenuItem Header="Файл">
-                <MenuItem Header="Загрузить граф" 
-                          Command="{Binding Source={x:Static infra:CommandEventBinder.LoadGraphCommand}}"/>
-            </MenuItem>
-        </Menu>
-        <Grid Grid.Row="1">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="4*" MinWidth="600"/>
-                <ColumnDefinition Width="3"/>
-                <ColumnDefinition Width="2*"/>
-            </Grid.ColumnDefinitions>
-            <controls:GraphCanvas Grid.Column="0" Graph="{Binding Graph.Graph}"
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="4*" MinWidth="600"/>
+            <ColumnDefinition Width="3"/>
+            <ColumnDefinition Width="2*" MinWidth="200"/>
+        </Grid.ColumnDefinitions>
+        <controls:GraphCanvas Grid.Column="0" Grid.Row="0" Graph="{Binding Graph.Graph}" Background="Transparent"
                                   VisitedPath="{Binding VisitedPath}"
                                   SelectedVerticeIndex="{Binding SelectedVerticeIndex, Mode=OneWayToSource}"
                                   IsOpenedCustomMeun="{Binding IsMenuOpened, Mode=TwoWay}"/>
-            <GridSplitter Grid.Column="1" HorizontalAlignment="Stretch"/>
-            <Grid Grid.Column="2">
+        <GridSplitter Grid.Column="1" HorizontalAlignment="Stretch" Grid.Row="0"/>
+        <Grid Grid.Column="2" Grid.Row="0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Grid Grid.Row="0">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
-                <Grid Grid.Row="0">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
 
-                    <TextBlock Grid.Row="0" Grid.Column="0"
+                <TextBlock Grid.Row="0" Grid.Column="0"
                                Text="Количетво вершин"/>
-                    <TextBlock Grid.Row="0" Grid.Column="1"
+                <TextBlock Grid.Row="0" Grid.Column="1"
                                Text="{Binding GraphInformationModel.VerticeCount}"/>
 
-                    <TextBlock Grid.Row="1" Grid.Column="0"
+                <TextBlock Grid.Row="1" Grid.Column="0"
                                Text="Количество дуг"/>
-                    <TextBlock Grid.Row="1" Grid.Column="1"
+                <TextBlock Grid.Row="1" Grid.Column="1"
                                Text="{Binding GraphInformationModel.ArrowCount}"/>
 
-                    <TextBlock Grid.Column="0" Grid.Row="2"
+                <TextBlock Grid.Column="0" Grid.Row="2"
                         Text="Коэффициент кластеризации графа" />
-                    <TextBlock Grid.Column="1" Grid.Row="2"
+                <TextBlock Grid.Column="1" Grid.Row="2"
                         Text="{Binding GraphInformationModel.ClusteringCoefficient}" />
 
-                    <TextBlock Grid.Row="3" Grid.Column="0"
+                <TextBlock Grid.Row="3" Grid.Column="0"
                                Text="Количество циклов"/>
-                    <TextBlock Grid.Row="3" Grid.Column="1" Text="{Binding GraphInformationModel.CyclesCount}"></TextBlock>
-                </Grid>
-                <Grid Grid.Row="1">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
+                <TextBlock Grid.Row="3" Grid.Column="1" Text="{Binding GraphInformationModel.CyclesCount}"></TextBlock>
+            </Grid>
+            <Grid Grid.Row="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
 
-                    <TextBlock Grid.Row="0" Grid.Column="0"
+                <TextBlock Grid.Row="0" Grid.Column="0"
                         Text="Индекс выбранной вершины"/>
-                    <TextBlock Grid.Row="0" Grid.Column="1"
+                <TextBlock Grid.Row="0" Grid.Column="1"
                                Text="{Binding VerticeInformationModel.Index}"/>
 
-                    <TextBlock Grid.Row="1" Grid.Column="0"
+                <TextBlock Grid.Row="1" Grid.Column="0"
                         Text="Коэффициент кластеризации вершины"/>
-                    <TextBlock Grid.Row="1" Grid.Column="1"
+                <TextBlock Grid.Row="1" Grid.Column="1"
                                Text="{Binding VerticeInformationModel.ClusteringCoefficient}"/>
 
-                    <TextBlock Grid.Row="2" Grid.Column="0"
+                <TextBlock Grid.Row="2" Grid.Column="0"
                                Text="Количество циклов с вершиной"/>
-                    <TextBlock Grid.Row="2" Grid.Column="1"
+                <TextBlock Grid.Row="2" Grid.Column="1"
                                Text="{Binding VerticeInformationModel.IncludedInCyclesCount}"/>
-                </Grid>
             </Grid>
-            <rm:RadialMenu Grid.Column="0" HalfShiftedItems="True"
-                           IsOpen="{Binding IsMenuOpened}" x:Name="RadialMenu" 
-                           Panel.ZIndex="15" Background="White">
-                <rm:RadialMenu.CentralItem>
-                    <rm:RadialMenuCentralItem Command="{Binding Source={x:Static infra:CommandEventBinder.CloseMenuCommand}}">
-                        <TextBlock>Close</TextBlock>
-                    </rm:RadialMenuCentralItem>
-                </rm:RadialMenu.CentralItem>
-                <rm:RadialMenuItem Command="{Binding Source={x:Static infra:CommandEventBinder.LoadGraphCommand}}">
-                    <TextBlock>LoadGraph</TextBlock>
-                </rm:RadialMenuItem>
-                <rm:RadialMenuItem Command="{Binding Source={x:Static infra:CommandEventBinder.ShowCyclesCommand}}">
-                    <TextBlock>Cycles</TextBlock>
-                </rm:RadialMenuItem>
-                <rm:RadialMenuItem>
-                    <TextBlock>Path</TextBlock>
-                </rm:RadialMenuItem>
-                <rm:RadialMenuItem>
-                    <TextBlock>Refresh</TextBlock>
-                </rm:RadialMenuItem>
-            </rm:RadialMenu>
         </Grid>
+        <rm:RadialMenu Grid.Column="0" Grid.Row="0" HalfShiftedItems="True"
+                           IsOpen="{Binding IsMenuOpened}" x:Name="RadialMenu" 
+                           Panel.ZIndex="15" Background="White" Margin="150,102,150,86">
+            <rm:RadialMenu.CentralItem>
+                <rm:RadialMenuCentralItem Command="{Binding Source={x:Static infra:CommandEventBinder.CloseMenuCommand}}">
+                    <TextBlock>Close</TextBlock>
+                </rm:RadialMenuCentralItem>
+            </rm:RadialMenu.CentralItem>
+            <rm:RadialMenuItem Command="{Binding Source={x:Static infra:CommandEventBinder.LoadGraphCommand}}">
+                <TextBlock>LoadGraph</TextBlock>
+            </rm:RadialMenuItem>
+            <rm:RadialMenuItem Command="{Binding Source={x:Static infra:CommandEventBinder.ShowCyclesCommand}}">
+                <TextBlock>Cycles</TextBlock>
+            </rm:RadialMenuItem>
+            <rm:RadialMenuItem Command="{Binding Source={x:Static infra:CommandEventBinder.ShowPathCommand}}">
+                <TextBlock>Path</TextBlock>
+            </rm:RadialMenuItem>
+            <rm:RadialMenuItem>
+                <TextBlock>Refresh</TextBlock>
+            </rm:RadialMenuItem>
+        </rm:RadialMenu>
+        <Rectangle Fill="Aquamarine" Grid.Row="1" Grid.ColumnSpan="3"/>
     </Grid>
 </Window>
