--- a/UI/App.xaml
+++ b/UI/App.xaml
@@ -8,6 +8,7 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Resources/GraphBrushes.xaml"/>
                 <ResourceDictionary Source="Resources/RadiusMenuItemStyle.xaml"/>
+                <ResourceDictionary Source="Resources/CommonStyle.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
